# strings

./: CMakeLists.txt  a.out
headers/: s21_string.h
src/: main.c  s21_isDigit.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_strcat.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strdup.c  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  test.c
src/helpers/: buffWriting.c  doubleConvertions.c  floatConvertions.c  helpers.c
